src/test/ui/liveness/liveness-closure-require-ret.stderr
error[E0308]: mismatched types
  --> $DIR/liveness-closure-require-ret.rs:2:37
   |
LL | fn main() { println!("{}", force(|| {})); }
   |                                     ^^ expected isize, found ()
   |
   = note: expected type `isize`
              found type `()`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
